# sector-daily

./: .gitignore  README.md  _config.yml  index.html  pyproject.toml  requirements.txt
.github/workflows/: daily-sector-intel.yml
_layouts/: blank.html
_site/: SETUP.md  feed.xml  index.html  robots.txt  sitemap.xml  test_sp500.py
config/: rss_sources.yml  sectors.yml  sp500_companies.yml
output/2025-12-27/: communication-services.md  consumer-discretionary.md  consumer-staples.md  energy.md  financials.md  health-care.md  industrials.md  information-technology.md  materials.md  other.md  real-estate.md  utilities.md
output/2025-12-28/: communication-services.md  consumer-discretionary.md  consumer-staples.md  energy.md  financials.md  health-care.md  industrials.md  information-technology.md  materials.md  other.md  real-estate.md  utilities.md
output/2025-12-29/: communication-services.md  consumer-discretionary.md  consumer-staples.md  energy.md  financials.md  health-care.md  industrials.md  information-technology.md  materials.md  other.md  real-estate.md  sp500.md  utilities.md
output/2025-12-30/: communication-services.md  consumer-discretionary.md  consumer-staples.md  energy.md  financials.md  health-care.md  industrials.md  information-technology.md  materials.md  other.md  real-estate.md  sp500.md  utilities.md
output/2025-12-31/: communication-services.md  consumer-discretionary.md  consumer-staples.md  energy.md  financials.md  health-care.md  industrials.md  other.md  (+5 more)
scripts/: fetch_sp500.py
templates/: sector_daily.md.j2  sp500_daily.md.j2
(+418 files in other folders)
